feat: ChainWatcher test case